# topology_nav_ros2

./: .gitignore  Dockerfile  LICENSE  README.md  requirements.txt  thirdparty.repos
bags/rosbag2_2023_10_17-20_53_07/: metadata.yaml
bags/rosbag2_2023_10_17-20_58_12/: metadata.yaml
bags/rosbag2_2023_10_17-21_00_23/: metadata.yaml
bags/rosbag2_2023_10_18-09_43_41/: metadata.yaml
bags/rosbag2_2023_10_18-09_50_41/: metadata.yaml
topological_localization/: package.xml  setup.cfg  setup.py
topological_localization/config/: default.rviz  params.yaml
topological_localization/launch/: demo.launch.py  demo_mh_amcl.launch.py  demo_motion.launch.py  demo_perception.launch.py  save_msg_array_to_disc.launch.py
topological_localization/resource/: msg.pkl
topological_localization/test/: test_pred_center_2d.py  test_predict.py
topological_localization/topological_localization/: experiment1.py  main.py  motion_update.py  perception_update.py  save_marker_to_disk.py  visualizer.py
topological_mapping/: package.xml  setup.cfg  setup.py
topological_mapping/config/: params.yaml  topomap_params.yaml
topological_mapping/launch/: display_map.launch.py  map.launch.py  save_to_disc.launch.py
topological_mapping/map/map/: map.yaml
topological_mapping/map/map13/: map13.npy  map13.yaml
topological_mapping/map/map20231023_132629/: map20231023_132629.npy  map20231023_132629.yaml
topological_mapping/map/map3/: map3.yaml
topological_mapping/map/map6/: map6.yaml
topological_mapping/test/: test_saved_map.py  test_topo_map_class.py
topological_mapping/test/tmp/map.npy/: map.yaml
topological_mapping/topological_mapping/: main.py  show_mapped_coordinates.py
topological_mapping/topological_mapping/topological_mapping/: images_to_map.py  node_test.py  test.py  topological_map.py  topological_mapping.py  visual_markers.py
vqa/vqa_msgs/: CMakeLists.txt  package.xml
vqa/vqa_msgs/msg/: FeaturesInfo.msg  MonologueHypothesis.msg  VisualFeatures.msg
vqa/vqa_msgs/srv/: Hypothesis.srv
vqa/vqa_ros/: package.xml  setup.cfg  setup.py
vqa/vqa_ros/config/: params.yaml
vqa/vqa_ros/launch/: vqa.launch.py
vqa/vqa_ros/vqa_ros/: vqa_ros.py
vqa/vqa_ros/vqa_ros/utils/: __init__.py
