<?xml version="1.0"?>
<package format="3">
  <name>vqa_msgs</name>
  <version>0.8.0</version>
  <description>Messages for vqa_ros pkg</description>
  <maintainer email="juan97pena@gmail.com">juan</maintainer>
  <license>TODO: License declaration</license>






  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>rosidl_default_runtime</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
